--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,10 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
